clang/test/BSC/Negative/SafeZone/raw_ptr_increment_decrement/raw_ptr_increment_decrement.cbs
// RUN: %clang_cc1 -verify -pedantic %s

void raw_ptr_increment_decrement(int *p) { // expected-note 4 {{pointer 'p' declared here}}
    _Safe {
        p++; // expected-error {{use of '++' on raw pointer not supported in safe zone; consider wrap in '_Unsafe { ... }'}}
        ++p; // expected-error {{use of '++' on raw pointer not supported in safe zone; consider wrap in '_Unsafe { ... }'}}
        p--; // expected-error {{use of '--' on raw pointer not supported in safe zone; consider wrap in '_Unsafe { ... }'}}
        --p; // expected-error {{use of '--' on raw pointer not supported in safe zone; consider wrap in '_Unsafe { ... }'}}
    }
}

// only the BSC error should fire — no -Wgnu-pointer-arith pile-on
void void_ptr_inc_dec(void *p) { // expected-note {{pointer 'p' declared here}}
    _Safe {
        p++; // expected-error {{use of '++' on raw pointer not supported in safe zone; consider wrap in '_Unsafe { ... }'}}
    }
}

typedef void (*FnP)(void);
void fn_ptr_inc_dec(FnP fp) { // expected-note {{pointer 'fp' declared here}}
    _Safe {
        fp++; // expected-error {{use of '++' on raw pointer not supported in safe zone; consider wrap in '_Unsafe { ... }'}}
    }
}
